<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_instrucao_cabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/escolha_do_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/escolha_do_app"
        android:id="@+id/imageView_opcao_robo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_instrucao_cabecalho"
        app:srcCompat="@drawable/padrao" />

    <TextView
        android:id="@+id/textView_instrucao_jogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/escolha_uma_opcao_abaixo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_opcao_robo" />

    <ImageView
        android:contentDescription="@string/escolha_do_jogador_pedra"
        android:id="@+id/imageView_opcao_pedra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:onClick="selecionadoPedra"
        app:layout_constraintEnd_toStartOf="@+id/imageView_opcao_papel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_instrucao_jogador"
        app:srcCompat="@drawable/pedra" />

    <ImageView
        android:contentDescription="@string/escolha_do_jogador_papel"
        android:id="@+id/imageView_opcao_papel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:onClick="selecionadoPapel"
        app:layout_constraintEnd_toStartOf="@+id/imageView_opcao_tesoura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_opcao_pedra"
        app:layout_constraintTop_toBottomOf="@+id/textView_instrucao_jogador"
        app:srcCompat="@drawable/papel" />

    <ImageView
        android:contentDescription="@string/escolha_do_jogador_tesoura"
        android:id="@+id/imageView_opcao_tesoura"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:onClick="selecionadoTesoura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_opcao_papel"
        app:layout_constraintTop_toBottomOf="@+id/textView_instrucao_jogador"
        app:srcCompat="@drawable/tesoura" />

</androidx.constraintlayout.widget.ConstraintLayout>